test/fixtures/eval/eval_typescript.snapshot
[eval]:1
enum Foo{};
^^^^
TypeScript enum is not supported in strip-only mode

SyntaxError: Unexpected reserved word
    at <node-internal-frames>

Node.js <node-version>
[eval]:1
throw new SyntaxError("hello")
^

SyntaxError: hello
    at [eval]:1:7
    at <node-internal-frames>
    at [eval]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>
[eval]:1
const foo;
      ^^^
'const' declarations must be initialized

SyntaxError: Missing initializer in const declaration
    at <node-internal-frames>

Node.js <node-version>
100
undefined
false
[eval]:1
interface Foo{};const foo;
          ^^^
'const' declarations must be initialized

SyntaxError: Unexpected identifier 'Foo'
    at <node-internal-frames>

Node.js <node-version>
[eval]:1
function foo(){ await Promise.resolve(1)};
                ^^^^^
await isn't allowed in non-async function

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at <node-internal-frames>

Node.js <node-version>
